# penner-optimization

./: .gitignore  CMakeLists.txt  README  README.md  TODO  environment.yml
cmake/: Catch2.cmake  cli11.cmake  comiso.cmake  conformal_ideal_delaunay.cmake  directional.cmake  eigen.cmake  geometry-central.cmake  gmm.cmake  highfive.cmake  json.cmake  libigl.cmake  mesh_simplification.cmake  myles_data.cmake  pybind11.cmake  seamless-optimization.cmake  spectra.cmake  suitesparse.cmake  symmetric-dirichlet.cmake
figures/: fig-all.sh  fig-comparison.sh  fig-disk.sh  fig-examples.sh  fig-initial.sh  fig-interpolation.sh  fig-objectives.sh  fig-teaser.sh  pipeline.sh  test.sh
py/: init_cm_data.py  render.py  spdlog.pc
scripts/: colormap_histogram.py  energy_table.py  error_table.py  histogram.py  holonomy_histogram.py  holonomy_overlay.py  holonomy_pipeline.py  (+33 more)
src/: CMakeLists.txt  _optimization_pybind.cpp  penner_optimization_interface.cpp  penner_optimization_interface.hh  penner_optimization_pybind.cpp  pybind.cpp
src/app/: CMakeLists.txt  angle_convergence_comparison.cpp  conformal_metric.cpp  optimize_metric.cpp  optimize_shear.cpp  plot_shear_energy.cpp
src/core/: CMakeLists.txt  area.cpp  area.hh  common.cpp  common.hh  cone_metric.cpp  cone_metric.hh  constraint.cpp  constraint.hh  embedding.cpp  embedding.hh  flip_matrix_generator.cpp  flip_matrix_generator.hh  globals.hh  io.cpp  io.hh  linear_algebra.cpp  linear_algebra.hh  projection.cpp  projection.hh  reparametrization.cpp  reparametrization.hh  shear.cpp  shear.hh  vector.cpp  vector.hh  vf_mesh.cpp  vf_mesh.hh
src/feature/: CMakeLists.txt  interface.cpp  pybind.cpp
src/feature/core/: boundary_path.cpp  common.cpp  component_mesh.cpp  io.cpp  quads.cpp  union_meshes.cpp  vf_corners.cpp  viewer.cpp
src/feature/dirichlet/: angle_constraint_relaxer.cpp  cone_perturber.cpp  constraint.cpp  dirichlet_penner_cone_metric.cpp  optimization.cpp
src/feature/experimental/: boundary_constraint_generator.cpp  boundary_constraint_validator.cpp  depracated.cpp  energy.cpp  junctions.cpp  marked_refinement.cpp  newton.cpp  patches.cpp  penner_optimization.cpp  polygon_cones.cpp  transfer.cpp
src/feature/feature/: error.cpp  features.cpp  gluing.cpp
src/feature/surgery/: cut_mesh_layout.cpp  cut_metric_generator.cpp  refinement.cpp  stitching.cpp
src/feature/util/: union_find.cpp
src/field/: CMakeLists.txt  comiso.h  cross_field.cpp  facet_field.cpp  field.cpp  forms.cpp  frame_field.cpp  intrinsic_field.cpp  rounder.cpp
src/holonomy/: CMakeLists.txt  holonomy_interface.cpp  holonomy_pybind.cpp  interface.cpp  pybind.cpp
src/holonomy/core/: VF_mesh.cpp  boundary.cpp  boundary_basis.cpp  common.cpp  dual_lengths.cpp  dual_loop.cpp  dual_segment.cpp  field.cpp  forms.cpp  homology_basis.cpp  intrinsic_field.cpp  quality.cpp  spanning_tree.cpp  vector.cpp  viewer.cpp
src/holonomy/field/: cross_field.cpp  facet_field.cpp  field.cpp  forms.cpp  frame_field.cpp  intrinsic_field.cpp
src/holonomy/holonomy/: cones.cpp  constraint.cpp  holonomy.cpp  marked_penner_cone_metric.cpp  newton.cpp  rotation_form.cpp
src/holonomy/similarity/: conformal.cpp  constraint.cpp  energy.cpp  layout.cpp  similarity_penner_cone_metric.cpp
src/metric/: area.cpp  common.cpp  cone_metric.cpp  constraint.cpp  flip_matrix_generator.cpp  projection.cpp  reparametrization.cpp  shear.cpp  viewer.cpp
src/metric_optimization/: CMakeLists.txt  convergence.cpp  convergence.hh  energies.cpp  energies.hh  energy_functor.cpp  energy_functor.hh  energy_weights.cpp  energy_weights.hh  explicit_optimization.cpp  explicit_optimization.hh  implicit_optimization.cpp  implicit_optimization.hh  nonlinear_optimization.cpp  nonlinear_optimization.hh
src/optimization/: CMakeLists.txt  area.cpp  area.hh  common.cpp  common.hh  cone_metric.cpp  cone_metric.hh  constraint.cpp  constraint.hh  convergence.cpp  convergence.hh  delaunay.cpp  delaunay.hh  deprecated.cpp  embedding.cpp  embedding.hh  energies.cpp  energies.hh  energy_functor.cpp  energy_functor.hh  energy_weights.cpp  energy_weights.hh  explicit_optimization.cpp  explicit_optimization.hh  globals.hh  implicit_optimization.cpp  implicit_optimization.hh  interface.cpp  interpolation.cpp  interpolation.hh  layout.cpp  layout.hh  layout_deprecated.cpp  layout_deprecated.hh  logging.cpp  logging.hh  nonlinear_optimization.cpp  nonlinear_optimization.hh  optimization_interface.cpp  optimization_interface.hh  (+28 more)
src/optimization/core/: area.cpp  common.cpp  cone_metric.cpp  constraint.cpp  embedding.cpp  flip_matrix_generator.cpp  io.cpp  linear_algebra.cpp  projection.cpp  reparametrization.cpp  shear.cpp  vector.cpp  vf_mesh.cpp  viewer.cpp
src/optimization/metric_optimization/: convergence.cpp  energies.cpp  energy_functor.cpp  energy_weights.cpp  explicit_optimization.cpp  implicit_optimization.cpp  nonlinear_optimization.cpp
src/optimization/parameterization/: interpolation.cpp  layout.cpp  refinement.cpp  translation.cpp  triangulation.cpp
src/optimization/tests/: test_area.cpp  test_energies.cpp  test_optimize.cpp  test_refinement.cpp  test_regression.cpp  test_shear.cpp  tests.cpp
src/optimization/tests/regression/: eight_Th_hat  knot1_metric_coords
src/optimization/util/: shapes.cpp  viewers.cpp  visualization.cc
src/parameterization/: CMakeLists.txt  interpolation.cpp  interpolation.hh  layout.cpp  layout.hh  refinement.cpp  refinement.hh  translation.cpp  translation.hh  triangulation.cpp  triangulation.hh
src/parametrization/: interpolation.cpp  layout.cpp  parametrize.cpp  refinement.cpp  translation.cpp  triangulation.cpp
src/tests/: test_area.cpp  test_energies.cpp  test_optimize.cpp  test_refinement.cpp  test_regression.cpp  test_shear.cpp  tests.cpp
src/tests/regression/: eight_metric_coords  knot1_Th_hat
src/util/: CMakeLists.txt  boundary.cpp  common.cpp  embedding.cpp  io.cpp  linear_algebra.cpp  map.cpp  shapes.cpp  shapes.hh  spanning_tree.cpp  validation.hh  vector.cpp  vf_corners.cpp  vf_mesh.cpp  viewers.cpp  viewers.hh  visualization.cc  visualization.hh
(+247 files in other folders)
